# FlandreOS

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
.cargo/: config
.github/: dependabot.yml
blog/: book.toml
blog/src/: SUMMARY.md
blog/src/misc/: contributors.md
blog/src/overview/: README.md  whta-flandre-os-is.md
misc/: contributors.html
overview/: index.html  whta-flandre-os-is.html
src/: lib.rs  main.rs  qemu.rs  serial.rs
src/vga_buffer/: buffer.rs  color.rs  mod.rs  writer.rs
tests/: basic_boot.rs  panic_handler.rs
