[package]
name = "flandre_os"
version = "0.0.1"
authors = ["lws <chenkun_lws@126.com>"]
edition = "2018"

[[test]]
name = "panic_handler"
harness = false

[dependencies]
bootloader = "0.6"
volatile = "0.2"
spin = "0.5"
x86_64 = "0.7"
uart_16550 = "0.2"

[dependencies.lazy_static]
version = "1.3"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-flandre_os.json"
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 180
